# aplikacja-fiszki

./: CMakeLists.txt  README.md  angielski.h  arabski.h  chinski_uproszczony.h  francuski.h  glowny_projekt.cpp  gruzinski.h  hebrajski.h  hindi.h  koreanski.h  norweski.h  rosyjski.h  tlumaczenie.h  wegierski.h  wietnamski.h
jezyki_excel/: Ang_slowa.csv  Book1.csv  Fra_slowa.csv  Gru_slowa.csv  Hin_slowa.csv  Nor_slowa.csv  Weg_slowa.csv  Wiet_slowa.csv  Wiet_slowa.xls  ara_slowa.csv  chin_slowa.csv  heb_slowa.csv  kor_slowa.csv  ros_slowa.csv  test.csv
